--- a/src/app/bd-toast-manager/bd-toast-manager.component.scss
+++ b/src/app/bd-toast-manager/bd-toast-manager.component.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/variables';
+
 @keyframes show_toast_animation {
   0% {
     opacity: 0;
@@ -16,13 +18,13 @@
   .toast {
     position: relative;
     display: block;
-    animation: show_toast_animation 500ms;
+    animation: show_toast_animation $interactive-animation-time;
     margin-bottom: 10px;
     margin-left: 10px;
     bottom: 0;
 
     &.remove {
-      transition: all 500ms;
+      transition: all $interactive-animation-time;
       opacity: 0;
       margin-bottom: -96px;
     }
