--- a/src/app/loads/components/load-stop-cards/load-stop-cards.component.scss
+++ b/src/app/loads/components/load-stop-cards/load-stop-cards.component.scss
@@ -7,11 +7,11 @@
 
 :host-context(.interactive-panel:hover) {
   background: $white;
-  transition: all 500ms;
+  transition: all $interactive-animation-time;
 
   &.card {
     color: $black;
-    transition: all 0.5s;
+    transition: all $interactive-animation-time;
 
     .card-section {
       .status {
@@ -27,7 +27,7 @@
   &.active {
     &.card {
       color: $silver;
-      transition: all 0.5s;
+      transition: all $interactive-animation-time;
 
       .card-section {
         .status {
@@ -46,7 +46,7 @@
   &.card {
     background: $mako;
     color: $silver;
-    transition: all 0.5s;
+    transition: all $interactive-animation-time;
 
     .card-section {
       .status {
