--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -13,7 +13,6 @@ $filter-header-max-width: 85px;
     width: 100%;
     height: 58px;
     padding: 0 $default-margin;
-    background: $white;
     align-items: center;
     border-bottom: $border;
     border-radius: $default-border-radius;
@@ -122,7 +121,7 @@ $filter-header-max-width: 85px;
 
 :host-context(.interactive-panel:hover) {
   .filter-header {
-    background: red !important;
+    background: $white;
+    transition: all $interactive-animation-time;
   }
 }
-
