--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -13,6 +13,7 @@ $filter-header-max-width: 85px;
     width: 100%;
     height: 58px;
     padding: 0 $default-margin;
+    background: $serenity;
     align-items: center;
     border-bottom: $border;
     border-radius: $default-border-radius;
