--- a/src/app/companies/components/company-detail/company-detail.component.html
+++ b/src/app/companies/components/company-detail/company-detail.component.html
@@ -7,7 +7,7 @@
       <company-basic-information [company]="selectedItem"></company-basic-information>
     </bd-view-detail-section>
     <navigation-anchor id="address"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'Address'" [addContent]="'add address'" [editButton]="false">
+    <bd-view-detail-section [labelText]="'Location'" [addContent]="'add location'" [editButton]="false" (addClick)="onAddLocationClick()">
         <company-address *ngFor="let location of selectedItem.locations" [location]="location"></company-address>
     </bd-view-detail-section>
     <navigation-anchor id="contacts"></navigation-anchor>
