--- a/src/app/loads/components/load-stop-card/load-stop-card.component.scss
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.scss
@@ -1,28 +1,62 @@
 @import '../../../../assets/styles/variables';
 
-:host {
+:host-context(.interactive-panel:hover) {
   background: $white;
+  transition: all $interactive-animation-time;
 
-  &.active,
-  &:hover {
-    background: $light-blue;
+  &.card {
+    color: $black;
+    transition: all $interactive-animation-time;
 
-    .status-text {
+    .card-section {
+      .status {
+        opacity: 1;
+      }
+    }
+
+    &:hover {
       background: $light-blue;
     }
   }
 
   &.active {
-    .card-section {
-      border-bottom-color: $blue;
+    &.card {
+      color: $silver;
+      transition: all $interactive-animation-time;
+
+      .card-section {
+        .status {
+          opacity: 1;
+        }
+      }
+
+      &:hover {
+        background: $mako;
+      }
     }
   }
 }
+
+:host-context(.active) {
+  &.card {
+    background: $mako;
+    color: $silver;
+    transition: all $interactive-animation-time;
+
+    .card-section {
+      .status {
+        opacity: 1;
+      }
+    }
+  }
+}
+
 
 .card-section {
   position: relative;
   height: $card-height;
   padding: 13px;
+  background: inherit;
   font-size: $tiny-font-size;
   cursor: pointer;
   border-bottom: $border;
@@ -119,6 +153,7 @@
     width: 12px;
     height: 12px;
     background: $black;
+    opacity: $status-opacity;
     bottom: 13px;
     border-radius: $form-control-height;
   }
