--- a/src/app/loads/components/load-stop-cards/load-stop-cards.component.scss
+++ b/src/app/loads/components/load-stop-cards/load-stop-cards.component.scss
@@ -1,4 +1,24 @@
+@import '../../../../assets/styles/variables';
+
 :host {
   display: block;
   margin-top: 20px;
+}
+
+load-stop-card {
+  background: transparent;
+  color: $dark-grey;
+
+  &.active {
+    color: $black;
+  }
+
+  &.active,
+  &:hover {
+    background: $light-blue;
+
+    .status-text {
+      background: $light-blue;
+    }
+  }
 }
