FSPA-464 #comment added interactive styles to load view

--- a/src/app/loads/components/load-detail/components/stop-view/stop-view.component.scss
+++ b/src/app/loads/components/load-detail/components/stop-view/stop-view.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../../assets/styles/variables';
+@import '../../../../../../assets/styles/mixins';
 @import '../../../../../../assets/styles/font-icons';
 
 $element-height: 18px;
@@ -16,8 +17,7 @@ $text-margin: 5px;
 }
 .stop-view-mode-section {
   display: flex;
-  border: $border;
-  background: $light-blue;
+  border: $default-border;
   font-size: $tiny-font-size;
   margin-bottom: 10px;
   flex-direction: column;
@@ -26,7 +26,7 @@ $text-margin: 5px;
   &:last-of-type {
     margin-bottom: 0;
   }
-    
+
   button {
     padding: 0;
     border: 0;
@@ -63,8 +63,7 @@ $text-margin: 5px;
   .stop-info-container {
     position: relative;
     display: flex;
-    background: $white;
-    border-bottom: $border;
+    border-bottom: $default-border;
     border-left: 4px solid $grey;
     border-top-left-radius: $default-border-radius;
     border-top-right-radius: $default-border-radius;
@@ -101,11 +100,10 @@ $text-margin: 5px;
       width: 50%;
       padding: $default-margin;
       color: $dark-grey;
-      border-right: 1px dashed $grey;
+      border-right: $default-border;
       flex-direction: column;
 
       .title {
-        color: $black;
         line-height: 12px;
         margin-left: $element-width;
         font-weight: bold;
@@ -174,6 +172,23 @@ $text-margin: 5px;
           display: block;
         }
       }
+    }
+  }
+}
+
+@include interactive-text;
+
+:host-context(.interactive-panel:hover) {
+  @include interactive-background;
+
+  .stop-view-mode-section {
+    border: $border;
+    background: $light-blue;
+    transition: all $interactive-animation-time;
+
+    .facility-info {
+      border-right: 1px dashed $grey;
+      transition: all $interactive-animation-time;
     }
   }
 }
