--- a/src/app/loads/components/load-detail/components/trip-view/trip-view.component.html
+++ b/src/app/loads/components/load-detail/components/trip-view/trip-view.component.html
@@ -1,9 +1,9 @@
 <div class="trip-container" [class.expanded]="isExpanded">
-  <div class="trip-info-container">
-    <div class="left-panel">
+  <div class="trip-info-container interactive-background">
+    <div class="left-panel left">
       <div class="info-panel">
         <div class="trip-info-header">
-        <span class="trip-number">TR{{tripData.trip.number}}</span>
+        <span class="trip-number interactive-text">TR{{tripData.trip.number}}</span>
       </div>
       <div class="driver-container">
         <div
@@ -37,17 +37,17 @@
       <div class="appointment-type">
         <div class="type-container">
           <span class="circle"></span>
-          <span class="type">{{appointmentType}}</span>
+          <span class="type interactive-text">{{appointmentType}}</span>
         </div>
       </div>
       <div class="date-range-container">
         <div class="date first-date">
-          <span class="date-value">{{tripData.appointment.from | date:'MM/dd/yy'}}</span>
-          <span class="time-value">{{tripData.appointment.from | date:'HH:mm'}}</span>
+          <span class="date-value interactive-text">{{tripData.appointment.from | date:'MM/dd/yy'}}</span>
+          <span class="time-value interactive-text">{{tripData.appointment.from | date:'HH:mm'}}</span>
         </div>
         <div class="date last-date">
-          <span class="date-value">{{tripData.appointment.to | date:'MM/dd/yy'}}</span>
-          <span class="time-value">{{tripData.appointment.to | date:'HH:mm'}}</span>
+          <span class="date-value interactive-text">{{tripData.appointment.to | date:'MM/dd/yy'}}</span>
+          <span class="time-value interactive-text">{{tripData.appointment.to | date:'HH:mm'}}</span>
         </div>
       </div>
     </div>
