--- a/src/app/loads/components/load-detail/components/stop-view/stop-view.component.html
+++ b/src/app/loads/components/load-detail/components/stop-view/stop-view.component.html
@@ -1,12 +1,12 @@
 <div class="stop-view-mode-section"
     [class.expanded-view]="isExpanded">
-    <div class="stop-info-container"
+    <div class="stop-info-container interactive-background"
     [class.pickup]="isPickup"
     [class.dropoff]="isDropoff"
     [class.combined]="isCombined">
         <div class="stripped-border"></div>
         <div class="facility-info">
-            <div class="title">{{stop.facility.name}}</div>
+            <div class="title interactive-text">{{stop.facility.name}}</div>
             <div class="info-item">
                 <span class="item-icon icon-location"></span>
                 <span class="item-text facility-address">{{stop.facility.address.streetAddress1}}, {{stop.facility.address.city}}, {{stop.facility.address.state}}, {{stop.facility.address.zip}}</span>
