--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
@@ -4,7 +4,7 @@
       </bd-user-circle>
       <div class="full-name-icons-container">
         <div class="full-name interactive-text">
-          {{contact.firstName}} {{contact.lastName}}
+          {{fullName}}
         </div>
         <div class="icons">
           <span class="icon-mail"></span>
